SNC-4648: POC code to verify css -> qwidget call works.

--- a/src/MEGASync/gui/linux/AccountDetailsDialog.ui
+++ b/src/MEGASync/gui/linux/AccountDetailsDialog.ui
@@ -105,6 +105,11 @@ color: #303233; /*colorToken.text-primary*/
 font-size: 13px;
 }
 
+#wCircularStorage
+{
+qproperty-color: red;
+}
+
 #sHeader
 {
     background-color: transparent;
