--- a/src/MEGASync/syncs/gui/Twoways/win/SyncSettingsUIBase.ui
+++ b/src/MEGASync/syncs/gui/Twoways/win/SyncSettingsUIBase.ui
@@ -214,7 +214,7 @@
   <customwidget>
    <class>WaitingSpinnerWidget</class>
    <extends>QWidget</extends>
-   <header>waitingspinnerwidget.h</header>
+   <header>WaitingSpinnerWidget.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
