SNC-4689: Fix PSA buttons (windows)

--- a/src/MEGASync/gui/win/PSAwidget.ui
+++ b/src/MEGASync/gui/win/PSAwidget.ui
@@ -312,7 +312,7 @@ stop: 0 #ffffff, stop: 1 #fafafa);
                <property name="maximumSize">
                 <size>
                  <width>16777215</width>
-                 <height>33</height>
+                 <height>16777215</height>
                 </size>
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout">
