SNC-4246 : Added custom sync type on sync flow.

--- a/src/MEGASync/gui/qml/qml.qrc
+++ b/src/MEGASync/gui/qml/qml.qrc
@@ -167,5 +167,6 @@
         <file>backups/BackupsPage.qml</file>
         <file>common/Utilities.qml</file>
         <file>components/steps/StepPanel.qml</file>
+        <file>syncs/SyncsPage.qml</file>
     </qresource>
 </RCC>
