SNC-4246 : Added resume page

--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -89,5 +89,6 @@
         <file>images/qml/check_circle_filled.svg</file>
         <file>images/qml/syncs/selective_sync.svg</file>
         <file>images/qml/syncs/full_sync.svg</file>
+        <file>images/qml/syncs/sync_resume.png</file>
     </qresource>
 </RCC>
