--- a/src/MEGASync/syncs/gui/Twoways/linux/RemoveSyncConfirmationDialog.ui
+++ b/src/MEGASync/syncs/gui/Twoways/linux/RemoveSyncConfirmationDialog.ui
@@ -26,13 +26,7 @@
    <string>Remove this sync?</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">QWidget
-{
-	font-size: 11px;
-	background: #FFFFFF; 
-}
-
-QWidget::title 
+   <string notr="true">QWidget::title 
 {
     width: 600px;
     height: 204px;
@@ -40,101 +34,86 @@ QWidget::title
     padding: 3px 10px;
     justify-content: center;
     align-items: center;
-    flex: 1 0 0;
-    
-}</string>
-  </property>
-  <widget class="QWidget" name="bLayout" native="true">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>177</y>
-     <width>202</width>
-     <height>26</height>
-    </rect>
-   </property>
-   <property name="maximumSize">
-    <size>
-     <width>16777215</width>
-     <height>26</height>
-    </size>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <property name="leftMargin">
-     <number>0</number>
-    </property>
-    <property name="topMargin">
-     <number>0</number>
-    </property>
-    <property name="rightMargin">
-     <number>0</number>
-    </property>
-    <property name="bottomMargin">
-     <number>0</number>
-    </property>
-   </layout>
-  </widget>
-  <widget class="QLabel" name="labelFolderIcon">
-   <property name="geometry">
-    <rect>
-     <x>24</x>
-     <y>24</y>
-     <width>96</width>
-     <height>96</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">border-image: url(&quot;:/images/icons/folder/synced-folder.png&quot;);
+    flex: 1 0 0;    
+}
+
+QPushButton#bCancel
+{   
+    /* Layout */
+    width: 72px;	 /* Figma specifies Width: 68 =&gt; add 4 for border-radius */
+    height: 38px; /* Figma specifies Height: 34 =&gt; add 4 for border-radius */
+    max-width: 72px;
+    max-height: 38px;
+
+    /* Style */
+    border-radius: 4px;
+    background-color: #fafafa;
+    border: 1px solid rgba(0, 0, 0, 0.10); /* rgba(0, 0, 0, 0.10) */
+
+    /* Typography */
+    color: #333333;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
+}
+
+QPushButton#bCancel:hover
+{
+    /* Button hover effect if needed */
+    background-color: #F2F2F2; /* Background color for hover state */
+    opacity: 1.0; /* Opacity for hover state */
+}
+
+QPushButton#bCancel:pressed
+{
+    /* Button pressed effect */
+    background-color: #FFFFFF; /* Background color for pressed state */
+    opacity: 1.0; /* Opacity for pressed state */
+}
+
+
+QPushButton#bOK
+{    
+    width: 77px;
+    height: 38px; /* Figma specifies Height: 34 =&gt; add 4 for border-radius */
+
+    /* Style */
+    border-radius: 4px;
+    border: 1px solid rgba(0, 0, 0, 10%); /* rgba(0, 0, 0, 0.10) */
+    background: #00BFA5;
+    box-shadow: 0px 1px 2px 0px rgba(0, 143, 107, 30%); /* rgba(0, 143, 107, 0.30); */
+
+    /* Typography */
+	color: #FFFFFF;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
+}
+
+QPushButton#bOK:hover 
+{
+    background: #00A787;
+}
+
+QPushButton#bOK:pressed 
+{
+    background: #00D7C2;
+}
+
+#labelFolderIcon
+{
+border-image: url(&quot;:/images/icons/folder/synced-folder.png&quot;);
 max-width: 96px;
 max-height: 96px;
-</string>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelHeader">
-   <property name="geometry">
-    <rect>
-     <x>144</x>
-     <y>36</y>
-     <width>432</width>
-     <height>24</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLabel 
-{
-	/* Layout */
-	align-self: stretch;
+}
 
-	/* Typography */
-    color: #303233;
-
-	/* Label 2/Semibold */
-    font-family: Inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 24px;
-    max-width: 432px;
-}</string>
-   </property>
-   <property name="text">
-    <string>Remove this sync?</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="labelMessage">
-   <property name="geometry">
-    <rect>
-     <x>144</x>
-     <y>68</y>
-     <width>432</width>
-     <height>36</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QLabel 
+#labelMessage
 {
 	/* Layout */
     max-width: 432px;
@@ -151,7 +130,61 @@ max-height: 96px;
 	word-wrap: break-word; /* Enable word wrap */
     white-space: pre-wrap;
 }
-</string>
+
+#labelHeader
+{
+	/* Layout */
+	align-self: stretch;
+
+	/* Typography */
+    color: #303233;
+
+	/* Label 2/Semibold */
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+    max-width: 432px;
+}</string>
+  </property>
+  <widget class="QLabel" name="labelFolderIcon">
+   <property name="geometry">
+    <rect>
+     <x>24</x>
+     <y>24</y>
+     <width>96</width>
+     <height>96</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelHeader">
+   <property name="geometry">
+    <rect>
+     <x>144</x>
+     <y>36</y>
+     <width>432</width>
+     <height>24</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="text">
+    <string>Remove this sync?</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="labelMessage">
+   <property name="geometry">
+    <rect>
+     <x>144</x>
+     <y>68</y>
+     <width>432</width>
+     <height>36</height>
+    </rect>
    </property>
    <property name="text">
     <string>The data on your computer and in MEGA will not be removed, but the folders will no longer sync with each other.</string>
@@ -182,43 +215,7 @@ max-height: 96px;
     </size>
    </property>
    <property name="styleSheet">
-    <string notr="true">QPushButton 
-{   
-    /* Layout */
-    width: 72px;	 /* Figma specifies Width: 68 =&gt; add 4 for border-radius */
-    height: 38px; /* Figma specifies Height: 34 =&gt; add 4 for border-radius */
-    max-width: 72px;
-    max-height: 38px;
-
-    /* Style */
-    border-radius: 4px;
-    background-color: #fafafa;
-    border: 1px solid rgba(0, 0, 0, 0.10); /* rgba(0, 0, 0, 0.10) */
-
-    /* Typography */
-    color: #333333;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px; /* 142.857% */
-}
-
-QPushButton:hover 
-{
-    /* Button hover effect if needed */
-    background-color: #F2F2F2; /* Background color for hover state */
-    opacity: 1.0; /* Opacity for hover state */
-}
-
-QPushButton:pressed 
-{
-    /* Button pressed effect */
-    background-color: #FFFFFF; /* Background color for pressed state */
-    opacity: 1.0; /* Opacity for pressed state */
-}
-</string>
+    <string notr="true"/>
    </property>
    <property name="text">
     <string>Cancel</string>
@@ -244,39 +241,6 @@ QPushButton:pressed
      <width>77</width>
      <height>36</height>
     </size>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QPushButton#bOK
-{    
-    width: 77px;
-    height: 38px; /* Figma specifies Height: 34 =&gt; add 4 for border-radius */
-
-    /* Style */
-    border-radius: 4px;
-    border: 1px solid rgba(0, 0, 0, 10%); /* rgba(0, 0, 0, 0.10) */
-    background: #00BFA5;
-    box-shadow: 0px 1px 2px 0px rgba(0, 143, 107, 30%); /* rgba(0, 143, 107, 0.30); */
-
-    /* Typography */
-	color: #FFFFFF;
-    font-feature-settings: 'clig' off, 'liga' off;
-    font-family: Inter;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 20px; /* 142.857% */
-}
-
-QPushButton#bOK:hover 
-{
-    background: #00A787;
-}
-
-QPushButton#bOK:pressed 
-{
-    background: #00D7C2;
-}
-</string>
    </property>
    <property name="text">
     <string>Remove</string>
